recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:7: error: not found: value lenth
  avance(lenth);
         ^Spiral:10: error: not found: value lenth
  return(steps-1,angle,lenth+increment,increment)
                       ^Spiral:10: warning: enclosing method spiral has result type Unit: return value discarded
  return(steps-1,angle,lenth+increment,increment)
  ^